# google-docs-rag-server-mcp

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  mcp.json  pyproject.toml  sources.yaml
.zenflow/tasks/application-google-drive-google-3c62/: plan.md  requirements.md  spec.md
docker/: Dockerfile.api  Dockerfile.indexer  docker-compose.yml
src/gdrive_rag/: __init__.py  config.py
src/gdrive_rag/api/: __init__.py  deps.py  main.py
src/gdrive_rag/api/routes/: admin.py  changes.py  documents.py  search.py
src/gdrive_rag/db/: session.py
src/gdrive_rag/db/migrations/: env.py
src/gdrive_rag/db/migrations/versions/: 001_initial_schema.py
src/gdrive_rag/indexer/: __init__.py  flows.py  tasks.py
src/gdrive_rag/indexer/extractors/: __init__.py  base.py  docx.py  gdoc.py  pdf.py
src/gdrive_rag/mcp/: __init__.py  server.py
src/gdrive_rag/mcp/tools/: __init__.py  get_document.py  list_changes.py  reindex_source.py  search_docs.py
src/gdrive_rag/models/: __init__.py  base.py  chunk.py  document.py  index_job.py  source.py
src/gdrive_rag/schemas/: __init__.py  document.py  mcp.py  search.py
src/gdrive_rag/services/: chunking.py  embedding.py  google_drive.py  retrieval.py
src/gdrive_rag/utils/: __init__.py  logging.py  metrics.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunking.py  test_embedding.py  test_models.py
